eventos corporativos dim

--- a/telas_finais/eventos.html
+++ b/telas_finais/eventos.html
@@ -136,6 +136,7 @@
 
         </section>
           <div class="tab-content" id="pills-tabContent">
+            <!-- sociais -->
               <div class="tab-pane fade show active" id="pills-social" role="tabpanel" aria-labelledby="pills-social-tab">
                 <article class="container container_descricao">
                   <br><br>
@@ -143,10 +144,10 @@
                   <br>
                   <section class="row align-items-center justify-content-evenly  py-4">
                       <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
-                          <img src="image/coloque_imagem.PNG" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
+                          <img src="image/coloque_imagem.PNG" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem1">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
-                          <h1 class="titulo_descricao" id="textto1">Estação Esportiva</h1>
+                          <h1 class="titulo_descricao" id="texto1">Estação Esportiva</h1>
                           <p id="texto2" class="texto_descricao">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
                         </p>
@@ -156,7 +157,7 @@
                   <div class="divisoria"></div>
                   <section class="row align-items-center justify-content-evenly  py-4">
                       <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
-                          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem1">
+                          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem2">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
                           <h1 class="titulo_descricao" id="texto3">Estação Esportiva</h1>
@@ -179,82 +180,127 @@
                         <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                       </div>
                   </section>
+                  <div class="divisoria"></div>
                 </article>
               </div>
-              <div class="tab-pane fade" id="pills-corporativo" role="tabpanel" aria-labelledby="pills-corporativo-tab">Conteúdo do Profile...</div>
+              <!-- corporativos -->
+              <div class="tab-pane fade" id="pills-corporativo" role="tabpanel" aria-labelledby="pills-corporativo-tab">
+                <article class="container container_descricao">
+                  <br><br>
+                  <div class="divisoria"></div>
+                  <br>
+                  <section class="row align-items-center justify-content-evenly  py-4">
+                      <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
+                          <img src="image/coloque_imagem.PNG" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem1">
+                      </div>
+                      <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
+                          <h1 class="titulo_descricao" id="texto1">Estação Esportiva</h1>
+                          <p id="texto2" class="texto_descricao">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
+                        </p>
+                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                        </div>
+                  </section>
+                  <div class="divisoria"></div>
+                  <section class="row align-items-center justify-content-evenly  py-4">
+                      <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
+                          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem2">
+                      </div>
+                      <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
+                          <h1 class="titulo_descricao" id="texto3">Estação Esportiva</h1>
+                          <p id="texto4" class="texto_descricao">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
+                        </p>
+                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                      </div>
+                  </section>
+                  <div class="divisoria"></div>
+                  <section class="row align-items-center justify-content-evenly  py-4">
+                      <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
+                          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem3">
+                      </div>
+                      <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
+                          <h1 class="titulo_descricao" id="texto5">Estação Esportiva</h1>
+                          <p id="texto6" class="texto_descricao">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
+                        </p>
+                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                      </div>
+                  </section>
+                  <div class="divisoria"></div>
+                  <section class="row align-items-center justify-content-evenly  py-4">
+                      <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
+                          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem4">
+                      </div>
+                      <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
+                          <h1 class="titulo_descricao" id="texto7">Estação Esportiva</h1>
+                          <p id="texto8" class="texto_descricao">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
+                        </p>
+                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                      </div>
+                  </section>
+                  <div class="divisoria"></div>
+                  <section class="row align-items-center justify-content-evenly  py-4">
+                      <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
+                          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem5">
+                      </div>
+                      <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
+                          <h1 class="titulo_descricao" id="texto9">Estação Esportiva</h1>
+                          <p id="texto10" class="texto_descricao">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
+                        </p>
+                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                      </div>
+                  </section>
+                  <div class="divisoria"></div>
+                  <section class="row align-items-center justify-content-evenly  py-4">
+                      <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
+                          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem6">
+                      </div>
+                      <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
+                          <h1 class="titulo_descricao" id="texto11">Estação Esportiva</h1>
+                          <p id="texto12" class="texto_descricao">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
+                        </p>
+                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                      </div>
+                  </section>
+                  <div class="divisoria"></div>
+                  <section class="row align-items-center justify-content-evenly  py-4">
+                      <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
+                          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem7">
+                      </div>
+                      <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
+                          <h1 class="titulo_descricao" id="texto13">Estação Esportiva</h1>
+                          <p id="texto14" class="texto_descricao">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
+                        </p>
+                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                      </div>
+                  </section>
+                  <div class="divisoria"></div>
+                  <section class="row align-items-center justify-content-evenly  py-4">
+                      <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
+                          <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem8">
+                      </div>
+                      <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
+                          <h1 class="titulo_descricao" id="texto15">Estação Esportiva</h1>
+                          <p id="texto16" class="texto_descricao">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
+                        </p>
+                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                      </div>
+                  </section>
+                </article>
+              </div>
           </div>
         </section>
-        <div class="divisoria"></div>
       </div>  
     </article>
     
 
-
-  <br>
  
-    <br><br><br>
-  
-    <!-- <hr>
-        <section>
-
-        </section>
-    <hr> -->
-    <!-- <article class="container container_descricao">
-        <hr>
-        <section class="row align-items-center justify-content-evenly  py-4">
-            <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-4 text-start col_texto_descricao ">
-                <h1 class="titulo_descricao">Estação Esportiva</h1>
-                <p id="texto4">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-              </p>
-              <a class="btn botao_oficinas" href="contato.html">Saiba Mais > </a>
-
-              </div>
-        </section>
-        <hr>
-        <section class="row align-items-center justify-content-evenly  py-4">
-            <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-4 text-start col_texto_descricao ">
-                <h1 class="titulo_descricao">Estação Esportiva</h1>
-                <p id="texto4">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-              </p>
-              <a class="btn botao_oficinas" href="contato.html">Saiba Mais > </a>
-
-              </div>
-        </section>
-        <hr>
-        <section class="row align-items-center justify-content-evenly  py-4">
-            <div class="col-sm-12 col-md-12 col-lg-6 col_imagem_descricao text-end">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem0">
-            </div>
-            <div class="col-sm-12 col-md-12 col-lg-4 text-start col_texto_descricao ">
-                <h1 class="titulo_descricao">Estação Esportiva</h1>
-                <p id="texto4">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-              </p>
-              <a class="btn botao_oficinas" href="contato.html">Saiba Mais > </a>
-
-              </div>
-        </section>
-        <hr>
-    </article>
-
-    -->
-
-
-
-
-
-
-
-
-
 
   <br><br><br><br><br><br>
 
