--- a/telas_finais/oficinas.html
+++ b/telas_finais/oficinas.html
@@ -151,7 +151,8 @@
                         <div class="card-content">
                             <h2 class="name" id="texto2">Batalha Nerf</h2>
                             <p class="description" id="texto3">
-                                Promover a diversão, o exercício físico, o trabalho em equipe, e o desenvolvimento de habilidades estratégicas e motoras, utilizando as pistolas Nerf em jogos organizados e seguros. Cenário de campo de batalha, equipamentos e regras de segurança.</p>
+                                Jogos estratégicos e dinâmicos.
+                            </p>
                             <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
                         </div>
                     </div>
