--- a/telas_finais/eventos.html
+++ b/telas_finais/eventos.html
@@ -147,10 +147,9 @@
                           <img src="image/coloque_imagem.PNG" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem1">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
-                          <h1 class="titulo_descricao" id="texto1">Estação Esportiva</h1>
+                          <h1 class="titulo_descricao" id="texto1">Recreação</h1>
                           <p id="texto2" class="texto_descricao">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-                        </p>
+                            Desenvolvemos jogos, dinâmicas e atividades sob medida para o público do seu evento. Além disso, contamos com uma equipe de recreadores treinados e apaixonados por proporcionar momentos de diversão e aprendizado para todas as idades.                        </p>
                         <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                         </div>
                   </section>
@@ -160,9 +159,9 @@
                           <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem2">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
-                          <h1 class="titulo_descricao" id="texto3">Estação Esportiva</h1>
+                          <h1 class="titulo_descricao" id="texto3">Aniversário temático</h1>
                           <p id="texto4" class="texto_descricao">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
+                            Nosso espaço é ideal para festas temáticas, brincadeiras interativas e atividades criativas, garantindo que a diversão esteja sempre presente!
                         </p>
                         <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                       </div>
@@ -173,16 +172,16 @@
                           <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem3">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
-                          <h1 class="titulo_descricao" id="texto5">Estação Esportiva</h1>
+                          <h1 class="titulo_descricao" id="texto5">Programação de Férias - Condomínios e Clubes</h1>
                           <p id="texto6" class="texto_descricao">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-                        </p>
+                            Durante as férias, garantimos que as crianças e adolescentes do condomínio tenham uma agenda cheia de aventuras, aprendizado e muita diversão! Com uma programação diversificada, nossas atividades são projetadas para entreter, educar e desenvolver habilidades sociais e motoras de maneira lúdica.                        </p>
                         <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                       </div>
                   </section>
                   <div class="divisoria"></div>
                 </article>
               </div>
+
               <!-- corporativos -->
               <div class="tab-pane fade" id="pills-corporativo" role="tabpanel" aria-labelledby="pills-corporativo-tab">
                 <article class="container container_descricao">
@@ -194,10 +193,9 @@
                           <img src="image/coloque_imagem.PNG" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem1">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
-                          <h1 class="titulo_descricao" id="texto1">Estação Esportiva</h1>
+                          <h1 class="titulo_descricao" id="texto1">Community Day</h1>
                           <p id="texto2" class="texto_descricao">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-                        </p>
+                            O Community Day é uma oportunidade para os colaboradores experimentarem o trabalho voluntário, vivenciarem novas experiências e reforçarem o espírito de equipe, contribuindo para o bem-estar social e ambiental da comunidade.                        </p>
                         <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                         </div>
                   </section>
@@ -207,10 +205,9 @@
                           <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem2">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
-                          <h1 class="titulo_descricao" id="texto3">Estação Esportiva</h1>
+                          <h1 class="titulo_descricao" id="texto3">Game 2030</h1>
                           <p id="texto4" class="texto_descricao">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-                        </p>
+                            Um game lúdico com uma potente ferramenta de aprendizagem que alinha o entretenimento com a educação corporativa sobre os Objetivos de Desenvolvimento Sustentável (ODS) da Agenda 2030 da ONU. Os participantes separados por equipes são desafiados a pensar criticamente e a agir de maneira colaborativa, enfrentando problemas reais e encontrando soluções sustentáveis na visão de uma empresa.                        </p>
                         <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                       </div>
                   </section>
@@ -220,10 +217,9 @@
                           <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem3">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
-                          <h1 class="titulo_descricao" id="texto5">Estação Esportiva</h1>
+                          <h1 class="titulo_descricao" id="texto5">Kids Day</h1>
                           <p id="texto6" class="texto_descricao">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-                        </p>
+                            O Programa é uma ação que aproxima a família do ambiente de trabalho, sendo estabelecido um dia para que os profissionais possam levar seus filhos à empresa.                        </p>
                         <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                       </div>
                   </section>
@@ -233,10 +229,9 @@
                           <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem4">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
-                          <h1 class="titulo_descricao" id="texto7">Estação Esportiva</h1>
+                          <h1 class="titulo_descricao" id="texto7">Leilão Temático</h1>
                           <p id="texto8" class="texto_descricao">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-                        </p>
+                            Divididos em equipes, os grupos devem responder perguntas sobre o tema proposto pela empresa, afim de conseguirem recompensas por cada resposta correta, possibilitando a compra de itens no nosso leilão.                        </p>
                         <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                       </div>
                   </section>
@@ -246,10 +241,9 @@
                           <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem5">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
-                          <h1 class="titulo_descricao" id="texto9">Estação Esportiva</h1>
+                          <h1 class="titulo_descricao" id="texto9">Robótica</h1>
                           <p id="texto10" class="texto_descricao">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-                        </p>
+                            O projeto STEAM visa unir conhecimentos de quatro áreas (ciências, tecnologia, engenharia, artes e matemática) em torno da construção ou automatização de algo que resolva o problema proposto                        </p>
                         <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                       </div>
                   </section>
@@ -259,10 +253,9 @@
                           <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem6">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
-                          <h1 class="titulo_descricao" id="texto11">Estação Esportiva</h1>
+                          <h1 class="titulo_descricao" id="texto11">Scape Room</h1>
                           <p id="texto12" class="texto_descricao">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-                        </p>
+                            O "Scape Room" é uma atividade estratégica e engajadora que visa fortalecer as habilidades da equipe, promover o trabalho em conjunto e desenvolver a resolução de problemas de maneira colaborativa.                        </p>
                         <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                       </div>
                   </section>
@@ -272,10 +265,9 @@
                           <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem7">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
-                          <h1 class="titulo_descricao" id="texto13">Estação Esportiva</h1>
+                          <h1 class="titulo_descricao" id="texto13">SIPAT</h1>
                           <p id="texto14" class="texto_descricao">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-                        </p>
+                            a SIPAT envolve uma série de atividades como palestras, workshops, dinâmicas, treinamentos práticos, e apresentações sobre prevenção de acidentes, ergonomia, saúde mental, primeiros socorros, e bem-estar geral.                        </p>
                         <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                       </div>
                   </section>
@@ -285,10 +277,9 @@
                           <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" alt="imagem descrição" class="img_descricao d-block w-100" id="imagem8">
                       </div>
                       <div class="col-sm-12 col-md-12 col-lg-4 col_texto_descricao ">
-                          <h1 class="titulo_descricao" id="texto15">Estação Esportiva</h1>
+                          <h1 class="titulo_descricao" id="texto15">Teatro</h1>
                           <p id="texto16" class="texto_descricao">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, quam explicabo adipisci debitis fugiat ipsum ad ullam quibusdam beatae esse corrupti magnam voluptatibus facilis sint iusto dolores voluptas. Autem, suscipit?
-                        </p>
+                            Por meio de apresentações teatrais, oficinas de improvisação, e encenações de situações do cotidiano empresarial, os colaboradores podem explorar temas como liderança, relacionamento interpessoal, gestão de conflitos, e empatia.                        </p>
                         <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
                       </div>
                   </section>
