--- a/telas_finais/tela_evento.html
+++ b/telas_finais/tela_evento.html
@@ -70,49 +70,49 @@
     <!--  fim vlibras  -->
 
   <!-- navbar -->
-  <header>
-    <nav class="navbar navbar-expand-lg fixed">
-        <div class="container-fluid">
-            <div>
-                <img src="image/Logo Passatempo.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
-            </div>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                <div class="offcanvas-header">
-                    <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>  
-                <div class="offcanvas-body">
-                    <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1 text-center">
-                        <li class="nav-item  navegacao_item">
-                            <a class="nav-link active navegacao_link" aria-current="page" href="home.html">Home</a>
-                        </li>
-                        <li class="nav-item navegacao_item">
-                            <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
-                        </li>
-                        <li class="nav-item navegacao_item">
-                            <a class="nav-link navegacao_link" href="eventos.html">Eventos</a>
-                        </li>
-                        <li class="nav-item navegacao_item">
-                            <a class="nav-link navegacao_link" href="saude.html">Saúde e Bem-Estar</a>
-                        </li>
-                        <li class="nav-item navegacao_item">
-                            <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
-                        </li>
-                        <li class="nav-item navegacao_item">
-                            <a class="nav-link navegacao_link" href="contato.html">Contato</a>
-                        </li>
-                        <li class="nav-item navegacao_item">
-                            <a class="nav-link navegacao_link" href="login.html">Admin</a>
-                        </li>
-                    </ul>
+    <header>
+        <nav class="navbar navbar-expand-lg fixed">
+            <div class="container-fluid">
+                <div>
+                    <img src="image/logo_passatempo_digital.png" class="passatempo_logo" alt="Logo do Passatempo Educativo">
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>  
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1 text-center">
+                            <li class="nav-item  navegacao_item">
+                                <a class="nav-link  navegacao_link" aria-current="page" href="home.html">Home</a>
+                            </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link" href="oficinas.html">Oficinas</a>
+                            </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link active" href="eventos.html">Eventos</a>
+                            </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link" href="saude.html">Saúde e Bem-Estar</a>
+                            </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
+                            </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link" href="contato.html">Contato</a>
+                            </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link" href="login.html">Admin</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
 
 
 
@@ -212,7 +212,6 @@
             </div>
         </div>
     </footer>
-
     
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="../js/eventos.js"></script>
