--- a/telas_finais/oficinas.html
+++ b/telas_finais/oficinas.html
@@ -165,10 +165,10 @@
                         <div class="card-content">
                             <h2 class="name" id="texto4">Bolhas Gigantes</h2>
                             <p class="description" id="texto5">
-                                Criar bolhas gigantes é uma atividade que encanta pessoas de todas as idades. magine o brilho nos olhos das crianças ao verem bolhas enormes pairando no ar, refletindo as cores do arco-íris. É um momento de diversão e admiração que ficará gravado na memória de todos os participantes. Deixe a imaginação fluir e embarque nessa jornada de encanto e magia com a nossa oficina de bolhas gigantes.</p>
+                                Criar bolhas gigantes é uma atividade que encanta pessoas de todas as idades. magine o brilho nos olhos das crianças ao verem bolhas enormes pairando no ar, refletindo as cores do arco-íris. É um momento de diversão e admiração que ficará gravado na memória de todos os participantes. Deixe a imaginação fluir e embarque nessa jornada de encanto e magia com a nossa oficina de bolhas gigantes.
+                            </p>
+                            <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
                         </div>
-                        <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
-
                     </div>
                     <div class="card swiper-slide">
                         <div class="image-content">
@@ -232,7 +232,7 @@
                             <h2 class="name" id="texto14">Robótica</h2>
                             <p class="description" id="texto15">
                                 Essa atividade não apenas proporciona aprendizado prático em engenharia e tecnologia, mas também fomenta um ambiente de competição saudável e o orgulho de ver o fruto do esforço em equipe.
-</p>
+                            </p>
                             <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
                         </div>
                     </div>
