--- a/telas_finais/navbar_adm.html
+++ b/telas_finais/navbar_adm.html
@@ -46,6 +46,9 @@
                             <li class="nav-item navegacao_item">
                                 <a class="nav-link navegacao_link" href="contato.html">Contato</a>
                             </li>
+                            <li class="nav-item navegacao_item">
+                                <a class="nav-link navegacao_link" href="login.html">Admin</a>
+                            </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Toggle perfil">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
