--- a/telas_finais/contato.html
+++ b/telas_finais/contato.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
-    <link rel="stylesheet" href="css/contato.css">
-    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="style_contato.css">
+    <link rel="stylesheet" href="style_navbar.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -104,98 +104,6 @@
             <h2>Entre em Contato</h2>
             <p class="form">Quer saber mais? Preencha o formulário para que possamos entrar em contato</p>
         </div>
-
-        <div class="container-fluid">
-
-            <!-- Coluna para imagem à esquerda -->
-            <div class="col-sm-3 text-center">
-                <img src="img/imagem_esquerda.jpg" alt="Imagem Esquerda" class="img-fluid">
-            </div>
-
-            <div class="container-fluid formulario">
-                <form action="">
-                    <label for="Nome">Nome</label>
-                    <input type="text" id="Nome" placeholder="Nome Completo" required>
-
-                    <label for="Email">Email</label>
-                    <input type="email" id="Email" placeholder="Email Para Contato" required>
-
-                    <label for="Telefone">Telefone</label>
-                    <input type="tel" id="Telefone" placeholder="Telefone Para Contato" required>
-
-                    <label for="Data">Data Do Evento</label>
-                    <input type="date" id="Data" required>
-
-                    <label for="Evento">Tipo Do Evento</label>
-                    <select id="Evento">
-                        <option value="1">Recreação</option>
-                        <option value="2">Aniversário temático</option>
-                        <option value="3">Programação de Férias - Condomínios e Clubes</option>
-                        <option value="4">Community Day</option>
-                        <option value="5">Game 2030</option>
-                        <option value="6">Kids Day</option>
-                        <option value="7">Leilão Temático</option>
-                        <option value="8">Robótica</option>
-                        <option value="9">Scape Room</option>
-                        <option value="10">SIPAT</option>
-                        <option value="11">Teatro</option>
-                        <option value="12">Batalha Nerf</option>
-                        <option value="13">Bolhas Gigantes</option>
-                        <option value="14">Catavento</option>
-                        <option value="15">Culinária</option>
-                        <option value="16">Pintura em Tela</option>
-                        <option value="17">Pulseira Macramê</option>
-                        <option value="18">Robótica</option>
-                        <option value="19">Slime</option>
-                        <option value="20">Terrário</option>
-                        <option value="21">Clínicas Esportivas</option>
-                        <option value="22">Estação Fitness</option>
-                    </select>
-
-                    <label for="Pessoas">Quantidade De Pessoas</label>
-                    <input type="number" id="Quantidade" min="1">
-
-                    <input type="button" value="Enviar" onclick="Send()" id="enviar">
-                </form>
-            </div>
-        </div>
-        <script src="https://smtpjs.com/v3/smtp.js"></script>
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
-        <script>
-
-            function Send() {
-                var nome = document.getElementById("Nome").value;
-                var email = document.getElementById("Email").value;
-                var telefone = document.getElementById("Telefone").value;
-                var data = document.getElementById("Data").value;
-                var evento = document.getElementById("Evento").value;
-                var pessoas = document.getElementById("Quantidade").value;
-
-                var body = "Nome: " + nome + "<br/> Email: " + email + "<br/> Telefone: " + telefone + "<br/> Data: " + data + "<br/> Evento: " + evento + "<br/> Pessoas: " + pessoas;
-
-                console.log(body);
-                Email.send({
-                    SecureToken: "cd5833e7-4298-4564-9761-d31300a300f5",
-                    To: 'passatempoeducativoeventos@gmail.com',
-                    From: "passatempoeducativoeventos@gmail.com",
-                    Subject: "Email de pedido de contato",
-                    Body: body
-                }).then(
-                    message => {
-                        if (message == 'OK') {
-                            swal("Sucesso", "Formulário enviado com sucesso! Em breve enviaremos um retorno!", "success");
-                        }
-                        else {
-                            swal("Ops, algo deu errado...", "Formulário não enviado!", "error");
-                        }
-                    }
-                );
-
-            }
-
-        </script>
-
         <section id="=contato_midias">
             <div class="container-fluid contato_midia">
                 <div class="row justify-content-center text-center">
@@ -253,12 +161,101 @@
                 </div>
             </div>
         </section>
+        <div class="container-fluid">
+            <div class="container-fluid formulario">
+                <form action="">
+                    <label for="Nome">Nome</label>
+                    <input type="text" id="Nome" placeholder="Nome Completo" required>
+
+                    <label for="Email">Email</label>
+                    <input type="email" id="Email" placeholder="Email Para Contato" required>
+
+                    <label for="Telefone">Telefone</label>
+                    <input type="tel" id="Telefone" placeholder="Telefone Para Contato" required>
+
+                    <label for="Data">Data Do Evento</label>
+                    <input type="date" id="Data" required>
+
+                    <label for="Evento">Tipo Do Evento</label>
+                    <select id="Evento">
+                        <option value="1">Recreação</option>
+                        <option value="2">Aniversário temático</option>
+                        <option value="3">Programação de Férias - Condomínios e Clubes</option>
+                        <option value="4">Community Day</option>
+                        <option value="5">Game 2030</option>
+                        <option value="6">Kids Day</option>
+                        <option value="7">Leilão Temático</option>
+                        <option value="8">Robótica</option>
+                        <option value="9">Scape Room</option>
+                        <option value="10">SIPAT</option>
+                        <option value="11">Teatro</option>
+                        <option value="12">Batalha Nerf</option>
+                        <option value="13">Bolhas Gigantes</option>
+                        <option value="14">Catavento</option>
+                        <option value="15">Culinária</option>
+                        <option value="16">Pintura em Tela</option>
+                        <option value="17">Pulseira Macramê</option>
+                        <option value="18">Robótica</option>
+                        <option value="19">Slime</option>
+                        <option value="20">Terrário</option>
+                        <option value="21">Clínicas Esportivas</option>
+                        <option value="22">Estação Fitness</option>
+                    </select>
+
+                    <label for="Pessoas">Quantidade De Pessoas</label>
+                    <input type="number" id="Quantidade" min="1">
+
+                    <label for="Idade">Idade Do Aniversariante</label>
+                    <input type="number" id="Idade" min="0">
+
+                    <input type="button" value="Enviar" onclick="Send()" id="enviar">
+                </form>
+            </div>
+        </div>
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+        <script>
+
+            function Send() {
+                var nome = document.getElementById("Nome").value;
+                var email = document.getElementById("Email").value;
+                var telefone = document.getElementById("Telefone").value;
+                var data = document.getElementById("Data").value;
+                var evento = document.getElementById("Evento").value;
+                var pessoas = document.getElementById("Quantidade").value;
+                var idade = document.getElementById("Idade").value;
+
+                var body = "Nome: " + nome + "<br/> Email: " + email + "<br/> Telefone: " + telefone + "<br/> Data: " + data + "<br/> Evento: " + evento + "<br/> Pessoas: " + pessoas +"<br/>Idade do aniversariante: " + idade;
+
+                console.log(body);
+                Email.send({
+                    SecureToken: "cd5833e7-4298-4564-9761-d31300a300f5",
+                    To: 'passatempoeducativoeventos@gmail.com',
+                    From: "passatempoeducativoeventos@gmail.com",
+                    Subject: "Email de pedido de contato",
+                    Body: body
+                }).then(
+                    message => {
+                        if (message == 'OK') {
+                            swal("Sucesso", "Formulário enviado com sucesso! Em breve enviaremos um retorno!", "success");
+                        }
+                        else {
+                            swal("Ops, algo deu errado...", "Formulário não enviado!", "error");
+                        }
+                    }
+                );
+
+            }
+
+        </script>
         <br>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
 
+            
         <body>
 
 </html>
