--- a/telas_finais/eventos.html
+++ b/telas_finais/eventos.html
@@ -150,7 +150,7 @@
                           <h1 class="titulo_descricao" id="texto1">Recreação</h1>
                           <p id="texto2" class="texto_descricao">
                             Desenvolvemos jogos, dinâmicas e atividades sob medida para o público do seu evento. Além disso, contamos com uma equipe de recreadores treinados e apaixonados por proporcionar momentos de diversão e aprendizado para todas as idades.                        </p>
-                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                        <a class="btn btn-primary botao_evento" href="../telas_finais/telas_eventos_sociais/recreacao.html">Saiba Mais</a>
                         </div>
                   </section>
                   <div class="divisoria"></div>
@@ -163,7 +163,7 @@
                           <p id="texto4" class="texto_descricao">
                             Nosso espaço é ideal para festas temáticas, brincadeiras interativas e atividades criativas, garantindo que a diversão esteja sempre presente!
                         </p>
-                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                        <a class="btn btn-primary botao_evento" href="../telas_finais/telas_eventos_sociais/aniversario_tematico.html">Saiba Mais</a>
                       </div>
                   </section>
                   <div class="divisoria"></div>
@@ -175,7 +175,7 @@
                           <h1 class="titulo_descricao" id="texto5">Programação de Férias - Condomínios e Clubes</h1>
                           <p id="texto6" class="texto_descricao">
                             Durante as férias, garantimos que as crianças e adolescentes do condomínio tenham uma agenda cheia de aventuras, aprendizado e muita diversão! Com uma programação diversificada, nossas atividades são projetadas para entreter, educar e desenvolver habilidades sociais e motoras de maneira lúdica.                        </p>
-                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                        <a class="btn btn-primary botao_evento" href="../telas_finais/telas_eventos_sociais/programacao_ferias.html">Saiba Mais</a>
                       </div>
                   </section>
                   <div class="divisoria"></div>
@@ -196,7 +196,7 @@
                           <h1 class="titulo_descricao" id="texto1">Community Day</h1>
                           <p id="texto2" class="texto_descricao">
                             O Community Day é uma oportunidade para os colaboradores experimentarem o trabalho voluntário, vivenciarem novas experiências e reforçarem o espírito de equipe, contribuindo para o bem-estar social e ambiental da comunidade.                        </p>
-                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                        <a class="btn btn-primary botao_evento" href="../telas_finais/telas_eventos_corporativos/community_day.html">Saiba Mais</a>
                         </div>
                   </section>
                   <div class="divisoria"></div>
@@ -208,7 +208,7 @@
                           <h1 class="titulo_descricao" id="texto3">Game 2030</h1>
                           <p id="texto4" class="texto_descricao">
                             Um game lúdico com uma potente ferramenta de aprendizagem que alinha o entretenimento com a educação corporativa sobre os Objetivos de Desenvolvimento Sustentável (ODS) da Agenda 2030 da ONU. Os participantes separados por equipes são desafiados a pensar criticamente e a agir de maneira colaborativa, enfrentando problemas reais e encontrando soluções sustentáveis na visão de uma empresa.                        </p>
-                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                        <a class="btn btn-primary botao_evento" href="../telas_finais/telas_eventos_corporativos/game2030.html">Saiba Mais</a>
                       </div>
                   </section>
                   <div class="divisoria"></div>
@@ -220,7 +220,7 @@
                           <h1 class="titulo_descricao" id="texto5">Kids Day</h1>
                           <p id="texto6" class="texto_descricao">
                             O Programa é uma ação que aproxima a família do ambiente de trabalho, sendo estabelecido um dia para que os profissionais possam levar seus filhos à empresa.                        </p>
-                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                        <a class="btn btn-primary botao_evento" href="../telas_finais/telas_eventos_corporativos/kids_day.html">Saiba Mais</a>
                       </div>
                   </section>
                   <div class="divisoria"></div>
@@ -232,7 +232,7 @@
                           <h1 class="titulo_descricao" id="texto7">Leilão Temático</h1>
                           <p id="texto8" class="texto_descricao">
                             Divididos em equipes, os grupos devem responder perguntas sobre o tema proposto pela empresa, afim de conseguirem recompensas por cada resposta correta, possibilitando a compra de itens no nosso leilão.                        </p>
-                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                        <a class="btn btn-primary botao_evento" href="../telas_finais/telas_eventos_corporativos/leilao_tematico.html">Saiba Mais</a>
                       </div>
                   </section>
                   <div class="divisoria"></div>
@@ -244,7 +244,7 @@
                           <h1 class="titulo_descricao" id="texto9">Robótica</h1>
                           <p id="texto10" class="texto_descricao">
                             O projeto STEAM visa unir conhecimentos de quatro áreas (ciências, tecnologia, engenharia, artes e matemática) em torno da construção ou automatização de algo que resolva o problema proposto                        </p>
-                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                        <a class="btn btn-primary botao_evento" href="../telas_finais/telas_eventos_corporativos/robotica.html">Saiba Mais</a>
                       </div>
                   </section>
                   <div class="divisoria"></div>
@@ -256,7 +256,7 @@
                           <h1 class="titulo_descricao" id="texto11">Scape Room</h1>
                           <p id="texto12" class="texto_descricao">
                             O "Scape Room" é uma atividade estratégica e engajadora que visa fortalecer as habilidades da equipe, promover o trabalho em conjunto e desenvolver a resolução de problemas de maneira colaborativa.                        </p>
-                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                        <a class="btn btn-primary botao_evento" href="../telas_finais/telas_eventos_corporativos/scape_room.html">Saiba Mais</a>
                       </div>
                   </section>
                   <div class="divisoria"></div>
@@ -268,7 +268,7 @@
                           <h1 class="titulo_descricao" id="texto13">SIPAT</h1>
                           <p id="texto14" class="texto_descricao">
                             a SIPAT envolve uma série de atividades como palestras, workshops, dinâmicas, treinamentos práticos, e apresentações sobre prevenção de acidentes, ergonomia, saúde mental, primeiros socorros, e bem-estar geral.                        </p>
-                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                        <a class="btn btn-primary botao_evento" href="../telas_finais/telas_eventos_corporativos/sipat.html">Saiba Mais</a>
                       </div>
                   </section>
                   <div class="divisoria"></div>
@@ -280,7 +280,7 @@
                           <h1 class="titulo_descricao" id="texto15">Teatro</h1>
                           <p id="texto16" class="texto_descricao">
                             Por meio de apresentações teatrais, oficinas de improvisação, e encenações de situações do cotidiano empresarial, os colaboradores podem explorar temas como liderança, relacionamento interpessoal, gestão de conflitos, e empatia.                        </p>
-                        <a class="btn btn-primary botao_evento" href="contato.html">Saiba Mais</a>
+                        <a class="btn btn-primary botao_evento" href="../telas_finais/telas_eventos_corporativos/teatro.html">Saiba Mais</a>
                       </div>
                   </section>
                 </article>
