--- a/telas_finais/telas_eventos_sociais/programacao_ferias.html
+++ b/telas_finais/telas_eventos_sociais/programacao_ferias.html
@@ -134,7 +134,7 @@
                 <h3>Quer saber mais?</h3>
                 <a class="btn botao_oficinas" href="../eventos.html" id="botao_oficinas"> Descubra os Eventos</a>
                 <h4>Entre em contato com agente</h4>
-                <button onclick="window.location.href='contato.html'" id="botao_contato">contato</button>
+                <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
             </div>
             <!-- <div class="col-sm-10 col-md-5 ">
                 <div class="row">
