--- a/telas_finais/telas_oficinas/catavento.html
+++ b/telas_finais/telas_oficinas/catavento.html
@@ -135,7 +135,7 @@
                 <h3>Quer saber mais?</h3>
                 <a class="btn botao_oficinas" href="../oficinas.html" id="botao_oficinas"> Descubra as Oficinas</a>
                 <h4>Entre em contato com agente</h4>
-                <button onclick="window.location.href='contato.html'" id="botao_contato">contato</button>
+                <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
             </div>
             <!-- <div class="col-sm-10 col-md-5 ">
                 <div class="row">
