Ajustes na tela oficina que tinha esquecido.
Coloquei os links de destino

--- a/telas_finais/oficinas.html
+++ b/telas_finais/oficinas.html
@@ -153,7 +153,7 @@
                             <p class="description" id="texto3">
                                 Jogos estratégicos e dinâmicos.
                             </p>
-                            <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
+                            <a class="btn btn-light botao_oficina text-center" href="../telas_finais/telas_oficinas/batalha_nerf.html"> Veja Mais</a>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -167,7 +167,7 @@
                             <p class="description" id="texto5">
                                 Criar bolhas gigantes é uma atividade que encanta pessoas de todas as idades. magine o brilho nos olhos das crianças ao verem bolhas enormes pairando no ar, refletindo as cores do arco-íris. É um momento de diversão e admiração que ficará gravado na memória de todos os participantes. Deixe a imaginação fluir e embarque nessa jornada de encanto e magia com a nossa oficina de bolhas gigantes.
                             </p>
-                            <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
+                            <a class="btn btn-light botao_oficina text-center" href="../telas_finais/telas_oficinas/bolhas_gigantes.html"> Veja Mais</a>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -180,7 +180,7 @@
                             <h2 class="name" id="texto6">Catavento</h2>
                             <p class="description" id="texto7">
                                 Com materiais simples e muita criatividade, os participantes poderão construir seu próprio cata-vento e experimentar a sensação de ver a força do vento transformada em movimento.</p>
-                            <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
+                            <a class="btn btn-light botao_oficina text-center" href="../telas_finais/telas_oficinas/catavento.html"> Veja Mais</a>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -193,7 +193,7 @@
                             <h2 class="name" id="texto8">Culinária</h2>
                             <p class="description" id="texto9">
                                 Com ingredientes coloridos e instruções simples, cada receita foi cuidadosamente planejada para estimular a criatividade e despertar o interesse dos pequenos pela culinária. Proporcionando momentos especiais em família e criando memórias afetuosas que serão lembradas com carinho no futuro.</p>
-                            <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
+                            <a class="btn btn-light botao_oficina text-center" href="../telas_finais/telas_oficinas/culinaria.html"> Veja Mais</a>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -206,7 +206,7 @@
                             <h2 class="name" id="texto10">Pintura em Tela</h2>
                             <p class="description" id="texto11">
                                 Aqui, os artistas podem explorar diferentes técnicas e estilos para dar vida às suas ideias e emoções. Cada item na nossa oficina é um convite para a expressão artística e a celebração da beleza que está presente em cada traço e cor. Junte-se a nós e deixe sua imaginação voar.</p>
-                            <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
+                            <a class="btn btn-light botao_oficina text-center" href="../telas_finais/telas_oficinas/pintura_tela.html"> Veja Mais</a>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -219,7 +219,7 @@
                             <h2 class="name" id="texto12">Pulseira Macramê</h2>
                             <p class="description" id="texto13">
                                 As crianças vão se encantar com a ideia de poder presentear um amigo com algo feito por elas mesmas, repleto de carinho e dedicação. Além de estimular a criatividade, essa atividade promove a amizade e fortalece os laços entre os pequenos.</p>
-                            <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
+                            <a class="btn btn-light botao_oficina text-center" href="../telas_finais/telas_oficinas/pulseira_macrame.html"> Veja Mais</a>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -233,7 +233,7 @@
                             <p class="description" id="texto15">
                                 Essa atividade não apenas proporciona aprendizado prático em engenharia e tecnologia, mas também fomenta um ambiente de competição saudável e o orgulho de ver o fruto do esforço em equipe.
                             </p>
-                            <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
+                            <a class="btn btn-light botao_oficina text-center" href="../telas_finais/telas_oficinas/robotica2.html"> Veja Mais</a>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -246,7 +246,7 @@
                             <h2 class="name" id="texto16">Slime</h2>
                             <p class="description" id="texto17">
                                 Com uma oficina de slime, os participantes têm a oportunidade de soltar a imaginação, misturar cores, texturas e criar algo único e especial. É uma atividade que estimula a coordenação motora, a concentração e a interação em grupo, proporcionando momentos de alegria e aprendizado.</p>
-                            <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
+                            <a class="btn btn-light botao_oficina text-center" href="../telas_finais/telas_oficinas/slime.html"> Veja Mais</a>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -259,7 +259,7 @@
                             <h2 class="name" id="texto18">Terrário</h2>
                             <p class="description" id="texto19">
                                 Você e seus pequenos poderão se divertir juntos enquanto aprendem a cuidar de plantas e criam um ambiente único e especial. Nossa oficina de terrários é uma oportunidade perfeita para estimular a criatividade, promover a conexão com a natureza e fortalecer os laços familiares.</p>
-                            <a class="btn btn-light botao_oficina text-center" href="#ofc"> Veja Mais</a>
+                            <a class="btn btn-light botao_oficina text-center" href="../telas_finais/telas_oficinas/terrario.html"> Veja Mais</a>
                         </div>
                     </div>
                 </div>
