--- a/telas_finais/oficinas.html
+++ b/telas_finais/oficinas.html
@@ -280,7 +280,7 @@
                 <!-- col com botao contate -->
 
                 <div class="col-10 col-sm-8 col-md-5 col-lg-3 div_contate">
-                    <a class="btn botao_contate_footer w-100" href="contato.html">
+                    <a class="btn botao_contate_footer w-100" href="../contato.html">
                         <div class="texto-botao">Contate-nos</div>
                     </a>
                 </div>
