--- a/telas_finais/telas_eventos_corporativos/community_day.html
+++ b/telas_finais/telas_eventos_corporativos/community_day.html
@@ -129,12 +129,13 @@
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
                 <h1 class="text-center">Community Day</h1>
-                <p>Uma iniciativa que incentiva os colaboradores de uma empresa a se engajarem em ações sociais em benefício da comunidade. Durante esse dia, as empresas mobilizam seus funcionários para participarem de atividades voluntárias, promovendo impacto positivo na sociedade, fortalecendo laços entre os colaboradores e alinhando a missão da empresa com práticas de responsabilidade social. O Community Day é uma oportunidade para os colaboradores experimentarem o trabalho voluntário, vivenciarem novas experiências e reforçarem o espírito de equipe, contribuindo para o bem-estar social e ambiental da comunidade.
+                <p class="text-center">Uma iniciativa que incentiva os colaboradores de uma empresa a se engajarem em ações sociais em benefício da comunidade. Durante esse dia, as empresas mobilizam seus funcionários para participarem de atividades voluntárias, promovendo impacto positivo na sociedade, fortalecendo laços entre os colaboradores e alinhando a missão da empresa com práticas de responsabilidade social. O Community Day é uma oportunidade para os colaboradores experimentarem o trabalho voluntário, vivenciarem novas experiências e reforçarem o espírito de equipe, contribuindo para o bem-estar social e ambiental da comunidade.
                 </p>
-                <h3>Quer saber mais?</h3>
-                <a class="btn botao_oficinas" href="../eventos.html" id="botao_oficinas"> Descubra os Eventos</a>
-                <h4>Entre em contato com agente</h4>
-                <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                <h3 class="text-center">Quer saber mais?</h3>
+                <h4 class="text-center">Entre em contato com agente</h4>
+                <div class="text-center">
+                    <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                </div>
             </div>
             <!-- <div class="col-sm-10 col-md-5 ">
                 <div class="row">
