--- a/telas_finais/telas_eventos_corporativos/leilao_tematico.html
+++ b/telas_finais/telas_eventos_corporativos/leilao_tematico.html
@@ -129,12 +129,13 @@
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
                 <h1 class="text-center">Leilão Temático</h1>
-                <p>Os nossos leilões sempre acabam com um gosto de “quero mais”. Divididos em equipes, os grupos devem responder perguntas sobre o tema proposto pela empresa, afim de conseguirem recompensas por cada resposta correta, possibilitando a compra de itens no nosso leilão. Ao decorrer da atividade, trazemos dados importantes e atualizados sobre a temática, eis alguns: Segurança no Trabalho - Semana SIPAT Abril verde Maio Amarelo Outubro Rosa Novembro Azul.
+                <p class="text-center">Os nossos leilões sempre acabam com um gosto de “quero mais”. Divididos em equipes, os grupos devem responder perguntas sobre o tema proposto pela empresa, afim de conseguirem recompensas por cada resposta correta, possibilitando a compra de itens no nosso leilão. Ao decorrer da atividade, trazemos dados importantes e atualizados sobre a temática, eis alguns: Segurança no Trabalho - Semana SIPAT Abril verde Maio Amarelo Outubro Rosa Novembro Azul.
                 </p>
-                <h3>Quer saber mais?</h3>
-                <a class="btn botao_oficinas" href="../eventos.html" id="botao_oficinas"> Descubra os Eventos</a>
-                <h4>Entre em contato com agente</h4>
-                <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                <h3 class="text-center">Quer saber mais?</h3>
+                <h4 class="text-center">Entre em contato com agente</h4>
+                <div class="text-center">
+                    <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                </div>
             </div>
             <!-- <div class="col-sm-10 col-md-5 ">
                 <div class="row">
