--- a/telas_finais/telas_eventos_corporativos/robotica.html
+++ b/telas_finais/telas_eventos_corporativos/robotica.html
@@ -131,10 +131,11 @@
                 <h1 class="text-center">Robótica</h1>
                 <p>O projeto STEAM visa unir conhecimentos de quatro áreas (ciências, tecnologia, engenharia, artes e matemática) em torno da construção ou automatização de algo que resolva o problema proposto. Kits de robótica, projetos "do it yourself" e arduinos fazem desse novo projeto algo dinâmico e inovador para os colaboradores
                 </p>
-                <h3>Quer saber mais?</h3>
-                <a class="btn botao_oficinas" href="../eventos.html" id="botao_oficinas"> Descubra os Eventos</a>
-                <h4>Entre em contato com agente</h4>
-                <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                <h3 class="text-center">Quer saber mais?</h3>
+                <h4 class="text-center">Entre em contato com agente</h4>
+                <div class="text-center">
+                    <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                </div>
             </div>
             <!-- <div class="col-sm-10 col-md-5 ">
                 <div class="row">
