--- a/telas_finais/telas_eventos_corporativos/scape_room.html
+++ b/telas_finais/telas_eventos_corporativos/scape_room.html
@@ -129,12 +129,14 @@
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
                 <h1 class="text-center">Scape Room</h1>
-                <p>O "Scape Room" é uma atividade estratégica e engajadora que visa fortalecer as habilidades da equipe, promover o trabalho em conjunto e desenvolver a resolução de problemas de maneira colaborativa.Os participantes são desafiados a resolver enigmas e superar obstáculos dentro de um ambiente temático, simulando situações complexas. Ao participar do Escape Room, os colaboradores têm a oportunidade de aprimorar competências, além disso, a natureza desafiadora da atividade estimula a criatividade e a resiliência, elementos cruciais para o sucesso em um ambiente empresarial dinâmico. O Scape Room Corporativo emerge como uma ferramenta valiosa para aprimorar o desempenho e fortalecer o espírito colaborativo dentro da organização.
+                <p class="text-center">O "Scape Room" é uma atividade estratégica e engajadora que visa fortalecer as habilidades da equipe, promover o trabalho em conjunto e desenvolver a resolução de problemas de maneira colaborativa.Os participantes são desafiados a resolver enigmas e superar obstáculos dentro de um ambiente temático, simulando situações complexas. Ao participar do Escape Room, os colaboradores têm a oportunidade de aprimorar competências, além disso, a natureza desafiadora da atividade estimula a criatividade e a resiliência, elementos cruciais para o sucesso em um ambiente empresarial dinâmico. O Scape Room Corporativo emerge como uma ferramenta valiosa para aprimorar o desempenho e fortalecer o espírito colaborativo dentro da organização.
                 </p>
-                <h3>Quer saber mais?</h3>
-                <a class="btn botao_oficinas" href="../eventos.html" id="botao_oficinas"> Descubra os Eventos</a>
-                <h4>Entre em contato com agente</h4>
-                <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                <h3 class="text-center">Quer saber mais?</h3>
+                
+                <h4 class="text-center">Entre em contato com agente</h4>
+                <div class="text-center">
+                    <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                </div>
             </div>
             <!-- <div class="col-sm-10 col-md-5 ">
                 <div class="row">
