--- a/telas_finais/telas_eventos_corporativos/teatro.html
+++ b/telas_finais/telas_eventos_corporativos/teatro.html
@@ -129,12 +129,14 @@
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
                 <h1 class="text-center">Teatro</h1>
-                <p>Ferramenta criativa e interativa utilizada para melhorar a comunicação, o trabalho em equipe, e o desenvolvimento pessoal dos colaboradores. Por meio de apresentações teatrais, oficinas de improvisação, e encenações de situações do cotidiano empresarial, os colaboradores podem explorar temas como liderança, relacionamento interpessoal, gestão de conflitos, e empatia. 
+                <p class="text-center">Ferramenta criativa e interativa utilizada para melhorar a comunicação, o trabalho em equipe, e o desenvolvimento pessoal dos colaboradores. Por meio de apresentações teatrais, oficinas de improvisação, e encenações de situações do cotidiano empresarial, os colaboradores podem explorar temas como liderança, relacionamento interpessoal, gestão de conflitos, e empatia. 
                 </p>
-                <h3>Quer saber mais?</h3>
-                <a class="btn botao_oficinas" href="../eventos.html" id="botao_oficinas"> Descubra os Eventos</a>
-                <h4>Entre em contato com agente</h4>
-                <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                <h3 class="text-center">Quer saber mais?</h3>
+                
+                <h4 class="text-center">Entre em contato com agente</h4>
+                <div class="text-center">
+                    <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                </div>
             </div>
             <!-- <div class="col-sm-10 col-md-5 ">
                 <div class="row">
