--- a/telas_finais/telas_eventos_sociais/aniversario_tematico.html
+++ b/telas_finais/telas_eventos_sociais/aniversario_tematico.html
@@ -129,12 +129,13 @@
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
                 <h1 class="text-center">Aniversário Temático</h1>
-                <p>Transforme o seu aniversário em um evento inesquecível! Oferecemos festas personalizadas, repletas de diversão, alegria e momentos especiais para todas as idades. Nosso espaço é ideal para festas temáticas, brincadeiras interativas e atividades criativas, garantindo que a diversão esteja sempre presente!
+                <p class="text-center">Transforme o seu aniversário em um evento inesquecível! Oferecemos festas personalizadas, repletas de diversão, alegria e momentos especiais para todas as idades. Nosso espaço é ideal para festas temáticas, brincadeiras interativas e atividades criativas, garantindo que a diversão esteja sempre presente!
                 </p>
-                <h3>Quer saber mais?</h3>
-                <a class="btn botao_oficinas" href="../eventos.html" id="botao_oficinas"> Descubra os Eventos</a>
-                <h4>Entre em contato com agente</h4>
-                <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                <h3 class="text-center">Quer saber mais?</h3>
+                <h4 class="text-center">Entre em contato com agente</h4>
+                <div class="text-center">
+                    <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                </div>
             </div>
             <!-- <div class="col-sm-10 col-md-5 ">
                 <div class="row">
