--- a/telas_finais/telas_eventos_sociais/programacao_ferias.html
+++ b/telas_finais/telas_eventos_sociais/programacao_ferias.html
@@ -129,12 +129,13 @@
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
                 <h1 class="text-center">Programação férias</h1>
-                <p>Durante as férias, garantimos que as crianças e adolescentes do condomínio tenham uma agenda cheia de aventuras, aprendizado e muita diversão! Com uma programação diversificada, nossas atividades são projetadas para entreter, educar e desenvolver habilidades sociais e motoras de maneira lúdica.
+                <p class="text-center">Durante as férias, garantimos que as crianças e adolescentes do condomínio tenham uma agenda cheia de aventuras, aprendizado e muita diversão! Com uma programação diversificada, nossas atividades são projetadas para entreter, educar e desenvolver habilidades sociais e motoras de maneira lúdica.
                 </p>
-                <h3>Quer saber mais?</h3>
-                <a class="btn botao_oficinas" href="../eventos.html" id="botao_oficinas"> Descubra os Eventos</a>
-                <h4>Entre em contato com agente</h4>
-                <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                <h3 class="text-center">Quer saber mais?</h3>
+                <h4 class="text-center">Entre em contato com agente</h4>
+                <div class="text-center">
+                    <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                </div>
             </div>
             <!-- <div class="col-sm-10 col-md-5 ">
                 <div class="row">
