--- a/telas_finais/telas_oficinas/culinaria.html
+++ b/telas_finais/telas_oficinas/culinaria.html
@@ -130,12 +130,14 @@
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
                 <h1 class="text-center">Culinária</h1>
-                <p>Elas poderão experimentar pratos deliciosos e se aventurar na cozinha de forma segura e divertida. Com ingredientes coloridos e instruções simples, cada receita foi cuidadosamente planejada para estimular a criatividade e despertar o interesse dos pequenos pela culinária. Cozinhar pode ser uma atividade educativa e prazerosa para as crianças, proporcionando momentos especiais em família e criando memórias afetuosas que serão lembradas com carinho no futuro.
+                <p class="text-center">Elas poderão experimentar pratos deliciosos e se aventurar na cozinha de forma segura e divertida. Com ingredientes coloridos e instruções simples, cada receita foi cuidadosamente planejada para estimular a criatividade e despertar o interesse dos pequenos pela culinária. Cozinhar pode ser uma atividade educativa e prazerosa para as crianças, proporcionando momentos especiais em família e criando memórias afetuosas que serão lembradas com carinho no futuro.
                 </p>
-                <h3>Quer saber mais?</h3>
-                <a class="btn botao_oficinas" href="../oficinas.html" id="botao_oficinas"> Descubra as Oficinas</a>
-                <h4>Entre em contato com agente</h4>
-                <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                <h3 class="text-center">Quer saber mais?</h3>
+                
+                <h4 class="text-center">Entre em contato com agente</h4>
+                <div class="text-center">
+                    <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                </div>
             </div>
             <!-- <div class="col-sm-10 col-md-5 ">
                 <div class="row">
