--- a/telas_finais/telas_oficinas/slime.html
+++ b/telas_finais/telas_oficinas/slime.html
@@ -130,12 +130,14 @@
         <div class="row justify-content-center d-flex">
             <div class="col-sm-10 col-md-5">
                 <h1 class="text-center">Slime</h1>
-                <p>A criatividade e diversão se encontram. Com uma oficina de slime, os participantes têm a oportunidade de soltar a imaginação, misturar cores, texturas e criar algo único e especial. É uma atividade que estimula a coordenação motora, a concentração e a interação em grupo, proporcionando momentos de alegria e aprendizado.
+                <p class="text-center">A criatividade e diversão se encontram. Com uma oficina de slime, os participantes têm a oportunidade de soltar a imaginação, misturar cores, texturas e criar algo único e especial. É uma atividade que estimula a coordenação motora, a concentração e a interação em grupo, proporcionando momentos de alegria e aprendizado.
                 </p>
-                <h3>Quer saber mais?</h3>
-                <a class="btn botao_oficinas" href="../oficinas.html" id="botao_oficinas"> Descubra as Oficinas</a>
-                <h4>Entre em contato com agente</h4>
-                <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                <h3 class="text-center">Quer saber mais?</h3>
+                
+                <h4 class="text-center">Entre em contato com agente</h4>
+                <div class="text-center">
+                    <button onclick="window.location.href='../contato.html'" id="botao_contato">contato</button>
+                </div>
             </div>
             <!-- <div class="col-sm-10 col-md-5 ">
                 <div class="row">
