--- a/telas_finais/telas_oficinas/culinaria.html
+++ b/telas_finais/telas_oficinas/culinaria.html
@@ -87,25 +87,25 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav barra_navegacao justify-content-around flex-grow-1 text-center">
                             <li class="nav-item  navegacao_item">
-                                <a class="nav-link navegacao_link" aria-current="page" href="home.html">Home</a>
+                                <a class="nav-link navegacao_link" aria-current="page" href="../home.html">Home</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link active " href="oficinas.html">Oficinas</a>
+                                <a class="nav-link navegacao_link active " href="../oficinas.html">Oficinas</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="eventos.html">Eventos</a>
+                                <a class="nav-link navegacao_link" href="../eventos.html">Eventos</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="saude.html">Saúde e Bem-Estar</a>
+                                <a class="nav-link navegacao_link" href="../saude.html">Saúde e Bem-Estar</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="galeria.html">Galeria</a>
+                                <a class="nav-link navegacao_link" href="../galeria.html">Galeria</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="contato.html">Contato</a>
+                                <a class="nav-link navegacao_link" href="../contato.html">Contato</a>
                             </li>
                             <li class="nav-item navegacao_item">
-                                <a class="nav-link navegacao_link" href="login.html">Admin</a>
+                                <a class="nav-link navegacao_link" href="../login.html">Admin</a>
                             </li>
                         </ul>
                     </div>
